<resources>
    <string name="app_name">GPA Calculator</string>
    <string name="paper1">Paper 1</string>
    <string name="paper1_hint">Enter Marks of Paper 1</string>
    <string name="paper2">Paper 2</string>
    <string name="paper2_hint">Enter Marks of Paper 2</string>
    <string name="paper3">Paper 3</string>
    <string name="paper3_hint">Enter Marks of Paper 3</string>
    <string name="paper4">Paper 4</string>
    <string name="paper4_hint">Enter Marks of Paper 4</string>
    <string name="paper5">Paper 5</string>
    <string name="paper5_hint">Enter Marks of Paper 5</string>
    <string name="paper6">Paper 6</string>
    <string name="paper6_hint">Enter Marks of Paper 6</string>
    <string name="paper7">Paper 7</string>
    <string name="paper7_hint">Enter Marks of Paper 7</string>
    <string name="pracitcal12">Pracitcal 1 &amp; 2</string>
    <string name="pracitcal12_hint">Enter Total of Pracitcal 1 &amp; 2</string>
    <string name="pracitcal34">Pracitcal 3 &amp; 4</string>
    <string name="pracitcal34_hint">Enter Total of Pracitcal 3 &amp; 4</string>
    <string name="pracitcal56">Pracitcal 5 &amp; 6</string>
    <string name="pracitcal56_hint">Enter Total of Pracitcal 5 &amp; 6</string>
    <string name="btn">Calculate Gpa</string>
    <string name="result">Result</string>
    <string name="sum">Sum</string>
    <string name="percent">Percent</string>
    <string name="gpa">GPA</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="note">Note: This is use default credit point that is 2</string>
</resources>