<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:paddingTop="12dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/withe"
        android:textSize="30sp"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/allscrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_above="@id/button"
        android:layout_marginTop="0dp"
        android:fillViewport="true"
        >

        <LinearLayout
            android:id="@+id/allLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper1"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper2"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper3"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper4"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout5"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper5"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper6"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout7"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper7"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout8"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper8"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout9"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper9"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paperLayout10"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/paper1"
                app:boxStrokeColor="#10C6DD"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper10"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/paper1_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:layout_marginBottom="152dp"

                    android:textColorHint="@drawable/hint_selector"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:onClick="open"
        android:drawableStart="@drawable/ic_thumb_up_black_24dp"
        android:paddingLeft="55dp"
        android:backgroundTint="@color/green"
        android:drawableTint="@color/withe"
        android:text="@string/btn"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        />


</RelativeLayout>